fix overlapping text maybe

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body {
 
 #result0 {
 	font-size: 40px !important;
-	margin-bottom: 40px;
+	margin-bottom: 80px;
 	margin-top: -40px;
 }
 
